--- a/dolphinscheduler-e2e/dolphinscheduler-e2e-case/pom.xml
+++ b/dolphinscheduler-e2e/dolphinscheduler-e2e-case/pom.xml
@@ -17,14 +17,16 @@
   ~ specific language governing permissions and limitations
   ~ under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-e2e</artifactId>
+        <groupId>org.apache.dolphinscheduler</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dolphinscheduler-e2e-case</artifactId>
 
