--- a/dolphinscheduler-microbench/pom.xml
+++ b/dolphinscheduler-microbench/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler</artifactId>
-        <version>3.1.9-SNAPSHOT</version>
+        <version>3.1.9</version>
     </parent>
 
     <artifactId>dolphinscheduler-microbench</artifactId>
