--- a/dolphinscheduler-registry/dolphinscheduler-registry-all/pom.xml
+++ b/dolphinscheduler-registry/dolphinscheduler-registry-all/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-registry</artifactId>
-        <version>3.1.9-SNAPSHOT</version>
+        <version>3.1.9</version>
     </parent>
 
     <artifactId>dolphinscheduler-registry-all</artifactId>
