--- a/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-db2/pom.xml
+++ b/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-db2/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-datasource-plugin</artifactId>
-        <version>3.1.9</version>
+        <version>3.1.10-SNAPSHOT</version>
     </parent>
 
     <artifactId>dolphinscheduler-datasource-db2</artifactId>
