--- a/dolphinscheduler-datasource-plugin/pom.xml
+++ b/dolphinscheduler-datasource-plugin/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler</artifactId>
-        <version>3.1.9</version>
+        <version>3.1.10-SNAPSHOT</version>
     </parent>
     <artifactId>dolphinscheduler-datasource-plugin</artifactId>
     <packaging>pom</packaging>
