--- a/dolphinscheduler-registry/dolphinscheduler-registry-plugins/dolphinscheduler-registry-etcd/pom.xml
+++ b/dolphinscheduler-registry/dolphinscheduler-registry-plugins/dolphinscheduler-registry-etcd/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-registry-plugins</artifactId>
-        <version>3.1.9</version>
+        <version>3.1.10-SNAPSHOT</version>
     </parent>
 
     <artifactId>dolphinscheduler-registry-etcd</artifactId>
