--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -149,7 +149,7 @@ jobs:
       fail-fast: false
       matrix:
         db: ["mysql", "postgresql"]
-        version: ["2.0.9", "3.0.6", "3.1.8"]
+        version: ["2.0.9", "3.0.6", "3.1.8", "3.2.0"]
     steps:
       - name: Set up JDK 8
         uses: actions/setup-java@v2
@@ -171,7 +171,7 @@ jobs:
           echo "DATABASE_VERSION=${VERSION//\./}" >> $GITHUB_ENV
       - name: Prepare
         run: |
-          wget https://dlcdn.apache.org/dolphinscheduler/${{ matrix.version }}/apache-dolphinscheduler-${{ matrix.version }}-bin.tar.gz -P dolphinscheduler/${{ matrix.version }}
+          wget https://archive.apache.org/dist/dolphinscheduler/${{ matrix.version }}/apache-dolphinscheduler-${{ matrix.version }}-bin.tar.gz -P dolphinscheduler/${{ matrix.version }}
           tar -xzf dolphinscheduler/${{ matrix.version }}/apache-dolphinscheduler-${{ matrix.version }}-bin.tar.gz -C dolphinscheduler/${{ matrix.version }} --strip-components 1
           tar -xzf dolphinscheduler/dev/apache-dolphinscheduler-*-bin.tar.gz -C dolphinscheduler/dev --strip-components 1
 
