--- a/dolphinscheduler-e2e/dolphinscheduler-e2e-case/src/test/resources/docker/basic/docker-compose.yaml
+++ b/dolphinscheduler-e2e/dolphinscheduler-e2e-case/src/test/resources/docker/basic/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
     image: apache/dolphinscheduler-standalone-server:ci
     environment:
       MASTER_MAX_CPU_LOAD_AVG: 100
+      MASTER_RESERVED_MEMORY: 0.01
       WORKER_TENANT_AUTO_CREATE: 'true'
     ports:
       - "12345:12345"
