chore: Docs change for 3.2.1 release

--- a/deploy/docker/.env
+++ b/deploy/docker/.env
@@ -15,8 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-HUB=ghcr.io/apache/dolphinscheduler
-TAG=latest
+HUB=apache
+TAG=3.2.1
 
 TZ=Asia/Shanghai
 DATABASE=postgresql
