--- a/dolphinscheduler-api/src/main/resources/application.yaml
+++ b/dolphinscheduler-api/src/main/resources/application.yaml
@@ -32,7 +32,7 @@ server:
 
 spring:
   profiles:
-    active: mysql
+    active: postgresql
   banner:
     charset: UTF-8
   jackson:
@@ -121,22 +121,33 @@ management:
       application: ${spring.application.name}
 
 registry:
-  type: jdbc
+  type: zookeeper
+  zookeeper:
+    namespace: dolphinscheduler
+    connect-string: localhost:2181
+    retry-policy:
+      base-sleep-time: 60ms
+      max-sleep: 300ms
+      max-retries: 5
+    session-timeout: 60s
+    connection-timeout: 15s
+    block-until-connected: 15s
+    digest: ~
 
 api:
-  audit-enable: true
+  audit-enable: false
   # Traffic control, if you turn on this config, the maximum number of request/s will be limited.
   # global max request number per second
   # default tenant-level max request number
   traffic-control:
-      global-switch: false
-      max-global-qps-rate: 300
-      tenant-switch: false
-      default-tenant-qps-rate: 10
-        #customize-tenant-qps-rate:
-        # eg.
-      #tenant1: 11
-      #tenant2: 20
+    global-switch: false
+    max-global-qps-rate: 300
+    tenant-switch: false
+    default-tenant-qps-rate: 10
+      #customize-tenant-qps-rate:
+    # eg.
+    #tenant1: 11
+    #tenant2: 20
   python-gateway:
     # Weather enable python gateway server or not. The default value is true.
     enabled: true
@@ -236,9 +247,9 @@ spring:
       on-profile: mysql
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://tidb.intm.aiadgen-int-1.int.infra.webex.com:4000/ds3?useUnicode=true&characterEncoding=UTF-8&enabledTLSProtocols=TLSv1.2
-    username: udp
-    password: K$6Uu8U$JlcJWXeT
+    url: jdbc:mysql://127.0.0.1:3306/dolphinscheduler
+    username: root
+    password: root
   quartz:
     properties:
       org.quartz.jobStore.driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
