--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ default_language_version:
 repos:
   # Python API Hooks
   - repo: https://github.com/pycqa/isort
-    rev: 5.13.2
+    rev: 5.10.1
     hooks:
       - id: isort
         name: isort (python)
@@ -50,11 +50,11 @@ repos:
           --ignore-init-module-imports,
           --in-place
         ]
-  #- repo: local
-   # hooks:
+  - repo: local
+    hooks:
       # Spotless Hooks
-    #  - id: spotless
-     #   name: spotless lint
-      #  entry: ./mvnw spotless:check
-       # language: script
-       # pass_filenames: false
+      - id: spotless
+        name: spotless lint
+        entry: ./mvnw spotless:check
+        language: script
+        pass_filenames: false
