--- a/dolphinscheduler-bom/pom.xml
+++ b/dolphinscheduler-bom/pom.xml
@@ -60,6 +60,7 @@
         <vertica-jdbc.version>12.0.4-0</vertica-jdbc.version>
         <oracle-jdbc.version>21.5.0.0</oracle-jdbc.version>
         <dameng-jdbc.version>8.1.2.79</dameng-jdbc.version>
+        <xugu-jdbc.version>12.1.12</xugu-jdbc.version>
         <ngdbc.version>2.4.51</ngdbc.version>
         <slf4j.version>1.7.36</slf4j.version>
         <poi.version>4.1.2</poi.version>
@@ -408,6 +409,13 @@
                 <artifactId>DmJdbcDriver18</artifactId>
                 <version>${dameng-jdbc.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.xugudb</groupId>
+                <artifactId>xugu-jdbc</artifactId>
+                <version>${xugu-jdbc.version}</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>com.vertica.jdbc</groupId>
