Add Eric as code owner for some dirs

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -23,7 +23,7 @@
 /dolphinscheduler-registry/ @caishunfeng @ruanwenjun
 /dolphinscheduler-api/ @caishunfeng @SbloodyS
 /dolphinscheduler-dao/ @caishunfeng @SbloodyS
-/dolphinscheduler-dao/src/main/resources/sql/
+/dolphinscheduler-dao/src/main/resources/sql/ @EricGao888
 /dolphinscheduler-common/ @caishunfeng
 /dolphinscheduler-standalone-server/ @caishunfeng
 /dolphinscheduler-datasource-plugin/ @caishunfeng
@@ -40,6 +40,6 @@
 /script/ @caishunfeng @SbloodyS @EricGao888
 /dolphinscheduler-ui/ @songjianet @Amy0104
 /docs/ @EricGao888
-/licenses/
+/licenses/ @EricGao888
 /images/ @EricGao888
 /style/ @caishunfeng
