[Doc] Fix ci docs check timeout issue (#15664)
* fix docs check timeout issue

* fix docs check timeout issue

* fix docs check timeout issue

* fix docs check timeout issue

* fix docs check timeout issue

* fix docs check timeout issue

* fix docs check timeout issue

* fix docs check timeout issue

* fix docs check timeout issue

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -55,13 +55,15 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
-      - run: sudo npm install -g markdown-link-check@3.10.0
+      - run: sudo npm install -g markdown-link-check@3.11.2
+      - run: sudo apt install plocate -y
       # NOTE: Change command from `find . -name "*.md"` to `find . -not -path "*/node_modules/*" -not -path "*/.tox/*" -name "*.md"`
       # if you want to run check locally
       - run: |
-          for file in $(find . -name "*.md" -not \( -path ./deploy/terraform/aws/README.md -prune \)); do
-            markdown-link-check -c .dlc.json -q "$file"
+          for file in $(locate "$PWD*/*.md" | grep -v ./deploy/terraform/aws/README.md); do
+            markdown-link-check -c .dlc.json -q "$file" &
           done
+          wait
   paths-filter:
     name: Helm-Doc-Path-Filter
     runs-on: ubuntu-latest
